--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Tagalog Learner</title>
+    <title>Incremental Tagalog</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="author" content="Timothy Foster, Auroratide" />
